--- a/st003/style.css
+++ b/st003/style.css
@@ -408,7 +408,7 @@ footer a:hover{
         position: absolute;
         left:0;
         top:66px;
-        background-color: #E9EAF3;
+        background-image: linear-gradient(to bottom, #0F3FD3,#255AFF );
         width:100%;
         padding: 0px 0 0px;
         text-align: center;
@@ -426,7 +426,7 @@ footer a:hover{
         display: block;
         margin:8px 0;
         border-radius: 5px;
-        color:rgb(40,40,40);
+        color:#FFDD33;
         text-decoration: none;
         font-weight: bold;
         border-bottom:1px solid rgba(0, 0, 0, 0.308);
