--- a/st003/style.css
+++ b/st003/style.css
@@ -426,7 +426,7 @@ footer a:hover{
         display: block;
         margin:8px 0;
         border-radius: 5px;
-        color:#FFDD33;
+        color:white;
         text-decoration: none;
         font-weight: bold;
         border-bottom:1px solid rgba(0, 0, 0, 0.308);
