--- a/st004/style.css
+++ b/st004/style.css
@@ -6,7 +6,8 @@
 body{
     background: #50C8FF;
     font: normal 15pt arial;
-    margin:0px;
+    margin-top:100px;
+    text-align: center;
     
 }
 
