--- a/st010/style.css
+++ b/st010/style.css
@@ -13,43 +13,46 @@ body {
 
 img{
     width: 200px;
+    margin-bottom: -25px;
     
 }
 
 .form{
+    padding: 10px;
     margin: auto;
-    width: 330px;
-    height: 330px;
+    width: 390px;
+    height: 380px;
     box-shadow: 0px 2px 14px -1px rgba(0, 0, 0, 0.377);
-    border-radius: 10px;
+    border-radius: 7px;
     background-color:#FFFFFF ;
 }
 
 p{
     padding: 20px;
+    font-size: 18px;
 }
 
 input{
     border: 1px solid #ccc;
     border-radius: 7px;
-    width: 300px;
-    padding: 12px;
+    width: 350px;
+    padding: 17px;
     margin-bottom: 15px;
 }
 
 .entrar{
     border: none;
-    padding: 10px;
-    width: 300px;
+    padding: 15px;
+    width: 350px;
     border-radius: 7px;
     color: white;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 700;
     background-color: #166FE5;
 }
 
 a{
-    font-size: 12px;
+    font-size: 15px;
     text-decoration: none;
     color:#18A1F6 ;
     margin-bottom: 10px;
@@ -57,8 +60,8 @@ a{
 
 .nova{
     border: none;
-    padding: 10px;
-    width: 150px;
+    padding: 15px;
+    width: 170px;
     border-radius: 7px;
     color: white;
     font-size: 15px;
