--- a/st011/style.css
+++ b/st011/style.css
@@ -1,101 +1,96 @@
 *{
-    padding: 0px;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
-
-:root{
     font-family: 'Lato', sans-serif;
+    list-style-type: none;
+    text-decoration: none;
 }
 
-.center{
+div.center{
     max-width: 1100px;
-    padding: 0 2%;
     margin: 0 auto;
+    padding: 0 2%;
 }
-
-.clear{clear: both;}
-
-
 header{
+    background-color: #3b5998;
     padding: 8px 0;
-    background-color: #1767cf;
 }
-.logo{
+div.logo{
     float: left;
     color: white;
-
 }
-
-.logo h2{
-    font-size: 28px;
+div.logo h2{
+    font-size: 29px;
     font-weight: normal;
 }
-
+div.clear{
+    clear: both;
+}
 form.form-login{
     float: right;
 }
 
-.form-login .form-element {
+form.form-login div.form-element{
     display: inline-block;
     margin-right: 15px;
-    
 }
 
-.form-element p {
+form.form-login div.form-element p{
     color: white;
     font-size: 14px;
 }
-
-.form-element input[type=email],
-.form-element input[type=password]{
+form.form-login div.form-element input[type=email], 
+form.form-login div.form-element input[type=password]{
     margin-top: 5px;
-    padding: 4px;
     border: 0;
+    padding: 3px;
     border-radius: 5px;
+    outline: none;
 }
-
-.form-element input[type=submit]{
+form.form-login div.form-element input[type=submit]{
     cursor: pointer;
-    border: 0;
-    border-radius: 5px;
-    background-color: #93b8f0;
+    border: none;
+    background-color: #3a6cd6;
     color: white;
     padding: 3px 5px;
+    border-radius: 5px;
 }
-
-.form-element input[type=submit]:hover{
-    background-color:#215ab2; 
+form.form-login div.form-element input[type=submit]:hover{
+    background-color: #1f4ba6;
 }
 
 section.main{
-    background: linear-gradient(white, #d3d8e8);
+    background: linear-gradient(white, #D3D8E8);
     padding: 40px 0;
 }
 
-.img-pessoas {
+div.img-pessoas{
     float: left;
     width: 60%;
 }
-
-.img-pessoas img{
+div.img-pessoas img{
     max-width: 100%;
 }
-
-.abrir-conta{
-    width: 40%;
+div.img-pessoas h3{
+    max-width: 460px;
+    font-size: 20px;
+    color: #0e385f;
+}
+div.abrir-conta{
     float: left;
+    width: 40%;
 }
 
-.abrir-conta h2{
-    color: black;
-    font-size: 26px;
+div.abrir-conta h2{
+    color: #333;
+    font-size: 35px;
 }
 
-.abrir-conta h3{
-    font-size: 23px;
-    color: #2c2c2c;
-    margin-top: 8px;
+div.abrir-conta h3{
+    color: rgb(30, 30, 30);
+    font-size: 19px;
+    margin-top: 10px;
     font-weight: normal;
 }
 
@@ -104,39 +99,149 @@ form.criar-conta{
 }
 
 .w50{
-    padding: 0 5px;
     width: 50%;
     float: left;
+    padding: 5px 5px 0 0;
 }
 
 .w100{
-    padding: 0 5px;
     width: 100%;
     float: left;
+    padding: 5px 5px 0 0;
 }
-
 form.criar-conta input{
     width: 100%;
-    margin-top: 8px;
 }
-
-form.criar-conta input[type=email],
+form.criar-conta input[type=email], 
 form.criar-conta input[type=text],
 form.criar-conta input[type=password]{
-    height: 40px;
-    padding-left: 10px;
-    font-size: 15px;
-    border: 1px solid #c3cef7;
-    border-radius: 10px;
+    font-size: 18px;
+    padding: 8px 10px;
+    border: 1px solid #ccd0d5;
+    border-radius: 5px;
+    outline: none;
 }
 
-
 form.criar-conta input[type=submit]{
-    height: 40px;
     background: linear-gradient(#67ae55, #578843);
-    color: white;
+    background-color: #69a74e;
+    border: 1px solid;
+    border-radius: 5px;
+    color: #fff;
     cursor: pointer;
-    border: 0.5px solid #c3cef7;
-    max-width: 200px;
-    font-size: 19px;
+    padding: 10px;
+    font-size: 18px;
+}
+form.criar-conta input[type=submit]:hover{
+    background-color: #67ae55;
+    background: linear-gradient(#81d66c, #75b85b);
+}
+
+form.criar-conta .w100 h3{
+    color: #90949c;
+    font-weight: bold;
+}
+form.criar-conta select.nascimento{
+    font-size: 18px;
+    float: left;
+    padding: 5px 10px;
+    border: 1px solid #ccd0d5;
+    border-radius: 5px;
+    outline: none;
+    margin-top: 5px;
+}
+
+form.criar-conta .input-radio{
+    display: inline-block;
+    padding: 0 10px 0 0;
+    margin: 0 0 15px 0;
+}
+form.criar-conta .input-radio label{
+    display: inline-block;
+    padding: 5px 5px 0 0;
+}
+form.criar-conta .input-radio input[type=radio]{
+    width: auto !important; 
+    display: inline-block;
+}
+
+label{
+    color: #1d2129;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+section.linguas{
+    padding: 10px 0;
+}
+section.linguas nav ul li{
+    display: inline-block;
+}
+section.linguas nav ul li a{
+    color: #385898;
+    font-size: 14px;
+    padding-right: 10px;
+}
+section.linguas nav ul li a:hover{
+    text-decoration: underline;
+}
+section.linguas nav ul li a.selected{
+    color: #737373;
+    cursor: auto;
+}
+section.linguas nav ul li a.selected:hover{
+    text-decoration: none;
+}
+section.linguas .center{
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+section.linguas .center:last-child{
+    border: none;
+    padding-top: 8px;
+}
+
+@media screen and (max-width: 768px){
+    .logo,
+    form.form-login{
+        width: 100%;
+        text-align: center;
+        float: none;
+    }
+    form.form-login{
+        display: inline-block;
+        margin-top: 20px;
+    }
+
+    form.form-login div.form-element{
+        display: block;
+        margin: 10px 0;
+    }
+    
+    form.form-login div.form-element p{
+        color: white;
+        font-size: 14px;
+    }
+    form.form-login div.form-element input[type=email], 
+    form.form-login div.form-element input[type=password]{
+        margin-top: 5px;
+        border: 0;
+        padding: 5px;
+        outline: none;
+        width: 100%;
+        max-width: 320px;
+    }
+    form.form-login div.form-element input[type=submit]{
+        width: 140px;
+    }
+
+    div.img-pessoas{
+        display: none;
+    }
+
+    div.abrir-conta{
+        width: 100%;
+    }
 }
