--- a/st015/style.css
+++ b/st015/style.css
@@ -39,15 +39,20 @@ input{
     background-color:#333333 ;
 }
 
+input.senha{
+    margin-bottom: 30px;
+}
 
-input.entre{
+
+a.entre{
     font-weight: bold;
-    font-size: 17px;
-    color: whitesmoke;
-    cursor: pointer;
-    background-color: #E50914;
-    padding: 13px;
-    width: 360px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 23px;
+    padding: 10px;
+    border-radius: 4px ;
+    color: #ffff;
+    background-color:red ;
+    width: 100px;
 }
 
 h3{
