--- a/st015/style.css
+++ b/st015/style.css
@@ -43,17 +43,17 @@ input{
     border-radius: 7px;
     padding: 5px;
     margin: 8px 0;
+    color: black;
 }
 
-.buttom{
+button{
     width: 305px;
     height: 50px;
-    background-color: #E50914;
+    border: none;
     border-radius: 7px;
-    padding: 14px;
-    cursor: pointer;
-    text-align: center;
-    
+    background-color:#D91921 ;
+    font-size: 18px;
+    margin: 7px 0px;
 }
 
 .help{
